<resources>
    <string name="app_name">Metro</string>
    <string name="start_station">Start Station</string>
    <string name="check">check</string>
    <string name="end_station">End Station</string>
    <string name="metro_station">Metro Station</string>
    <string name="line_three">Line Three</string>
    <string name="line_two">Line Two</string>
    <string name="line_one">Line One</string>
    <string name="map">Map</string>
    <string name="Switch">Switch</string>
    <string name="start_trip">Start Trip</string>
    <string name="location">Location</string>
    <string name="stations">Stations</string>
    <string name="my_location">My Location</string>
    <string name="nearby_station">Nearby Station</string>
    <string name="number_of_stations">Number of stations</string>
    <string name="time_of_trip">Time of trip</string>
    <string name="price_of_your_trip">price of your trip</string>
    <string name="history_of_trip">History of trip</string>
    <string name="history">History</string>
    <string name="image">image</string>
</resources>